syntax = "proto3";

option go_package = "github.com/ltcsuite/mwebd";

service Rpc {
    rpc Utxos(UtxosRequest) returns (stream Utxo);
    rpc Addresses(AddressRequest) returns (AddressResponse);
    rpc Spent(SpentRequest) returns (SpentResponse);
    rpc Create(CreateRequest) returns (CreateResponse);
}

message UtxosRequest {
    int32 from_height = 1;
    bytes scan_secret = 2;
}

message Utxo {
    int32 height = 1;
    uint64 value = 2;
    string address = 3;
    string output_id = 4;
}

message AddressRequest {
    uint32 from_index = 1;
    uint32 to_index = 2;
    bytes scan_secret = 3;
    bytes spend_pubkey = 4;
}

message AddressResponse {
    repeated string address = 1;
}

message SpentRequest {
    repeated string output_id = 1;
}

message SpentResponse {
    repeated string output_id = 1;
}

message CreateRequest {
    bytes raw_tx = 1;
    bytes scan_secret = 2;
    bytes spend_secret = 3;
    uint64 fee_rate_per_kb = 4;
}

message CreateResponse {
    bytes raw_tx = 1;
    repeated string output_id = 2;
}
